samples/_failures_safe/1761321501_d93f25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df8f9d88.c: In function ‘main’:
./samples/SAFE/__tmp_df8f9d88.c:160:5: error: ‘init’ undeclared (first use in this function); did you mean ‘int’?
  160 |     init
      |     ^~~~
      |     int
./samples/SAFE/__tmp_df8f9d88.c:160:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_df8f9d88.c:160:9: error: expected ‘;’ at end of input
  160 |     init
      |         ^
      |         ;
./samples/SAFE/__tmp_df8f9d88.c:160:5: error: expected declaration or statement at end of input
  160 |     init
      |     ^~~~
